# dapt_reproduction

./: .gitignore  DAPT_Reproduction.ipynb  Debug笔记.md  README.md  pyproject.toml  复现笔记.md
dapt_tools/: __init__.py  core.py  exact_solver.py  hamiltonian.py  utils.py
tests/: TESTING_REPORT.md  __init__.py  test_core.py  test_dapt_integration.py  test_exact_solver.py  test_hamiltonian.py  test_optimization_performance.py  test_utils.py
